add build script

--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -34,3 +34,6 @@ jobs:  # Groups together all the jobs that run in this workflow
 
       - name: Run unit tests  # Step name for running tests
         run: npm run test  # Run the test script defined in package.json
+
+      - name: Build the app # Step name for building the app
+        run: npm run build
